; ModuleID = '/home/carl/AnghaBench/RetroArch/libretro-common/audio/dsp_filters/extr_reverb.c_revmodel_setdry.c'
source_filename = "/home/carl/AnghaBench/RetroArch/libretro-common/audio/dsp_filters/extr_reverb.c_revmodel_setdry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.revmodel = type { float }

@scaledry = common dso_local global float 0.000000e+00, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.revmodel*, float)* @revmodel_setdry to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @revmodel_setdry(%struct.revmodel* %0, float %1) #0 {
  %3 = alloca %struct.revmodel*, align 8
  %4 = alloca float, align 4
  store %struct.revmodel* %0, %struct.revmodel** %3, align 8
  store float %1, float* %4, align 4
  %5 = load float, float* %4, align 4
  %6 = load float, float* @scaledry, align 4
  %7 = fmul float %5, %6
  %8 = load %struct.revmodel*, %struct.revmodel** %3, align 8
  %9 = getelementptr inbounds %struct.revmodel, %struct.revmodel* %8, i32 0, i32 0
  store float %7, float* %9, align 4
  %10 = load %struct.revmodel*, %struct.revmodel** %3, align 8
  %11 = call i32 @revmodel_update(%struct.revmodel* %10)
  ret void
}

declare dso_local i32 @revmodel_update(%struct.revmodel*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
